c4prj1_deck/grade.txt
Grading at Sun Mar  7 21:54:55 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:43:25: error: incompatible type for argument 2 of ‘add_card_to’
       add_card_to(build,hands[j]->cards[i]);
                         ^
deck.c:6:6: note: expected ‘card_t {aka struct card_tag}’ but argument is of type ‘card_t * {aka struct card_tag *}’
 void add_card_to(deck_t * deck, card_t c){
      ^
Compilation of deck.c failed

Overall Grade: F
